syntax = "proto3";

package pb;

import "account/account.proto";

option go_package = "github.com/auronvila/simple-bank/pb/account";

message CreateAccountRequest {
  string owner = 1;
  string currency = 2;
}

message CreateAccountResponse {
  Account account = 1;
}