syntax = "proto3";
import "user/user.proto";

package pb;


option go_package = "github.com/auronvila/simple-bank/pb/user";

message CreateUserRequest {
  string username = 1;
  string full_name = 2;
  string email = 3;
  string password = 4;
}

message CreateUserResponse {
  User user = 1;
}

